# walkingpad-gui

./: HOME_ASSISTANT_SETUP.md  QUICKSTART.md  README.md  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup.py  test_imports.py  walkingpad-gui.desktop
walkingpad_gui/: __init__.py  gui.py
