[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walkingpad-gui"
version = "1.0.0"
description = "Simple GUI controller for WalkingPad with Home Assistant integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ph4-walkingpad>=1.0.2",
    "requests>=2.25.0",
]
authors = [
    {name = "WalkingPad GUI Project"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Topic :: Home Automation",
]

[project.scripts]
walkingpad-gui = "walkingpad_gui.gui:main"
